feat(workflow): implement issue-driven spec clarification workflow

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -14,19 +14,37 @@ body:
         Claude Code Actions を使用して、効率的な開発を行います。
 
   - type: textarea
-    id: feature_description
+    id: goal
     attributes:
-      label: 🎯 機能概要 / Feature Description
-      description: 実装したい機能を自然言語で詳しく説明してください
+      label: 🎯 ゴール・ユーザーストーリー / Goal & User Story
+      description: 誰が、何を、何のためにしたいのかを記載してください
       placeholder: |
-        例: ユーザー認証システム
-        - ログイン・ログアウト機能
-        - パスワードリセット機能
-        - セッション管理
-        - OAuth対応（Google, GitHub）
+        例: 顧客として、過去の注文を確認するために、注文履歴画面を見たい
       value: ""
     validations:
       required: true
+
+  - type: textarea
+    id: context
+    attributes:
+      label: 📝 背景・コンテキスト / Context & Background
+      description: なぜこの機能が必要なのか、現状の課題などを記載してください
+      value: ""
+    validations:
+      required: true
+  
+  - type: textarea
+    id: ui_ux
+    attributes:
+      label: 🖼️ UI/UXイメージ / UI/UX Expectations
+      description: 画面のイメージ、必要な要素、インタラクションなどを記載してください
+      placeholder: |
+        - リスト形式で注文を表示
+        - タップすると詳細画面へ遷移
+        - フィルタリング機能（期間、ステータス）
+      value: ""
+    validations:
+      required: false
 
   - type: dropdown
     id: priority
