--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -60,7 +60,7 @@ body:
     id: steps_to_reproduce
     attributes:
       label: 🔄 再現手順 / Steps to Reproduce
-      description: バグを再現するための詳細な手順を記載してください
+      description: バグを再現するための詳細な手順を記載してください（不明確な場合、ボットが質問します）
       placeholder: |
         1. アプリケーションを起動
         2. ログインページにアクセス
