--- a/.github/workflows/issue-spec-clarification.yml
+++ b/.github/workflows/issue-spec-clarification.yml
@@ -22,35 +22,27 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Render Claude Prompt
+        id: render_prompt
+        shell: bash
+        run: |
+          export ISSUE_NUMBER="${{ github.event.issue.number }}"
+          export ISSUE_TITLE="${{ github.event.issue.title }}"
+          export ISSUE_BODY="${{ github.event.issue.body }}"
+          
+          # Define variables to substitute
+          VARS='$ISSUE_NUMBER $ISSUE_TITLE $ISSUE_BODY'
+          
+          envsubst "$VARS" < .github/prompts/issue-spec-clarification.md > prompt_rendered.md
+          
+          echo "CLAUDE_PROMPT<<EOF" >> $GITHUB_ENV
+          cat prompt_rendered.md >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
       - name: Run Claude Spec Clarification
         uses: anthropics/claude-code-action@v1
         with:
           claude_code_oauth_token: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
           anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
-          prompt: |
-            Act as a Senior Product Manager and System Architect.
-            Your goal is to ensure that the Feature Request or Bug Report in this Issue has sufficient information for a developer to start working on it immediately without ambiguity.
-
-            Target Issue: #${{ github.event.issue.number }}
-            Title: ${{ github.event.issue.title }}
-            Body: ${{ github.event.issue.body }}
-            
-            Task:
-            1. Analyze the Issue Title and Body.
-            2. Check if the "Definition of Ready" is met:
-               - [Feature] Clear Goal/User Story is present?
-               - [Feature] Context/Background is clear?
-               - [Feature] Acceptance Criteria are verifiable?
-               - [Bug] Steps to Reproduce are clear?
-               - [Bug] Expected vs Actual behavior is defined?
-            3. If the spec consists of sufficient information:
-               - Use `gh issue comment` to post: "Specification Confirmed. Ready for development."
-               - Use `gh issue edit` to add the label `spec: confirmed`.
-               - If the label `spec: clarifying` exists, remove it.
-            4. If information is missing or ambiguous:
-               - Use `gh issue comment` to ask specific clarifying questions. Be polite but precise.
-               - Use `gh issue edit` to add the label `spec: clarifying`.
-            
-            Note: If the user just replied to your previous questions (check recent comments if possible, or infer from context), re-evaluate based on the new information.
-
+          prompt: ${{ env.CLAUDE_PROMPT }}
           claude_args: '--allowed-tools "Bash(gh issue view:*),Bash(gh issue list:*),Bash(gh issue comment:*),Bash(gh issue edit:*)"'
